test/data/invalid-messages/local-namespace.message
## a message that is in the org.freedesktop.Local. namespace and thus
## invalid

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER method_call

FIELD_NAME ifce
TYPE STRING
STRING 'org.freedesktop.Local'
FIELD_NAME mebr
TYPE STRING
STRING 'Disconnected'

ALIGN 8
END_LENGTH Header
START_LENGTH Body
END_LENGTH Body
